...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="47k-vM-4FT">
                                        <rect key="frame" x="120.5" y="245" width="104" height="40"/>
                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                                        <state key="normal" title="Continuar">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="dismiss:" destination="Ih2-PH-fYR" eventType="touchUpInside" id="Oql-0t-4mf"/>
                                        </connections>
                                    </button>
...
